--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Love Calculator</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="index.css">
-		</link>
+		<link rel="stylesheet" href="fontawesome/css/all.css">
 		<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
 	</head>
 
@@ -16,21 +16,24 @@
 		<div class="grid-container">
 			<div class="inputdiv">
 				<form id="form">
-					<label>Your Name</label><input id="name1"  type="text" name="name"><br>
-					<label>Partner Name</label><input id="name2"  type="text" name="name"><br>
+					<label>Your Name</label><input id="name1" type="text" name="name"><br>
+					<label>Partner Name</label><input id="name2" type="text" name="name"><br>
 					<input type="submit" name="submit" id="submit">
 				</form>
 			</div>
 			<div class="result">
-				<img id="img1" src="boy.png" alt="img"><span>Vs</span>
-				<img id="img2" src="girl.png" alt="img">
-				<section>
-					<span>Percentage</span>
+				<div class="image-section">
+					<img id="img1" src="boy.png" alt="img">
+					<i class="fas fa-heart"></i>
+					<img id="img2" src="girl.png" alt="img">
+				</div>
+				<div class="result-section">
+					Percentage
 					<strong>
 						<p></p>%
 					</strong>
-				</section>
-				<textarea row="3" disabled="">Result</textarea>
+					<textarea row="3" disabled="">Result</textarea>
+				</div>
 			</div>
 		</div>
 		<script type="text/javascript" src="index.js"></script>
